# YoungHaKim7.github.io

./: Cargo.toml  README.md  ads.txt  analysis.html  comment.html  confirm.php  contact.html  developer.html  developer2.html  download.html  fibo.html  gsoc.html  history.html  index.html  index.html(code)  index.scss  license.html  more.html  new_more.html  patents.html  payment_1yr_premium.html  refund.html  stock_price_check.html
css/: freetype.css  freetype2.css  freetype2_60.css  freetype2_60_2.css
css/contents_paid/: lang_contents_paid.css
css/lang_css/: asmx86_64_lang1.css  code_highlight.css  contents_paid.css  cpp_lang1.css  payment.css  rust_lang1.css
css/lang_css/code_highlight_lang/: asm_code_highlight.css
css/menu_top/: gotop.css  gotop_contents_paid.css  nav_bar.css
docs/: gyoung-github-io-31e686d0c50f48ef.js  gyoung-github-io-31e686d0c50f48ef_bg.wasm  gyoung-github-io-34e77d8daa45366c.js  gyoung-github-io-34e77d8daa45366c_bg.wasm  gyoung-github-io-f948511841ab676e.js  gyoung-github-io-f948511841ab676e_bg.wasm  index.html
docs/.perseus/: bundle.wasm
docs/about/: index.html
docs/studykr/: index.html
freetype2/docs/: documentation.html  ft2faq.html  index.html
gy_doc/: documentation.html  sample_mermaid.html  sdl_cpp_dev.html
gy_doc/Investment/: index.html  index_investment.html  news_more.html
gy_doc/Rust_lang/: 250109_string_rust_dev.html
gy_doc/contents_paid/: rust_backup.html  rust_counsel_price.html  rust_vim_paid.html
js/: highlight.js
opentype/: index.html
public/: fail.html
public/payment/: checkout.html  success.html
public/widget/: checkout.html  confirm.php  index.php  success.html
src/: main.rs
src/css/: clock.css  gotop.css  nav-bar.css  styles.css
src/js_src/: clock.js
tools/finance/: economic_calendar.html  fibonacci_calculator.html  world_indices.html
ttfautohint/: history.html  index.html  osx.html
ttfautohint/doc/: ttfautohint.html
(+27 files in other folders)
