[package]
name = "gyoung-github-io"
version = "0.1.0"
edition = "2021"
description = "GlobalYoung's personal blog and portfolio built and rendered using Rust/WASM."
readme = "README.md"
repository = "https://github.com/YoungHaKim7/GYoung.github.io"
license = "Apache-2.0"
keywords = ["blog", "portfolio", "wasm", "yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]


[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
