[package]
name = "gyoung-github-io"
version = "0.1.0"
edition = "2021"
description = "GlobalYoung's personal blog and portfolio built and rendered using Rust/WASM."
readme = "README.md"
repository = "https://github.com/YoungHaKim7/YoungHaKim7.github.io"
license = "Apache-2.0"
keywords = ["blog", "portfolio", "wasm", "perseus"]
categories = ["gui", "wasm", "web-programming"]


[dependencies]
perseus = { version = "=0.4.2", features = [ "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "=0.4.2", features = [ "dflt-server" ] }

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]

